Update thesis and add report for GREEN-WUP

--- a/relazione.tex
+++ b/relazione.tex
@@ -8,19 +8,19 @@
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[hidelinks]{hyperref}
-\hypersetup{pdftitle={Il protocollo GreenWup, approcci e performance},pdfauthor={Leonardo Emili}}
+\hypersetup{pdftitle={Progettazione di un dispositivo IoT basato su wake up radio},pdfauthor={Leonardo Emili}}
 
-\title{Il protocollo GreenWup, approcci e performance}
+\title{Progettazione di un dispositivo IoT basato su wake up radio}
 \author{Leonardo Emili}
 \IDnumber{1802989}
 \course{Informatica L-31}
 \courseorganizer{Facoltà di Ingegneria dell'informazione, informatica e statistica}
 \AcademicYear{2019/2020}
 \copyyear{2020}
-\advisor{Dr. Chiara Petrioli, PhD}
-\tutor{Georgia Koutsandria, PhD}
-\tutorcoord{Dr. Chiara Petrioli, PhD}
-\tutorcoord{Georgia Koutsandria, PhD}
+\advisor{Prof. Chiara Petrioli}
+\tutor{Dr. Georgia Koutsandria}
+\tutorcoord{Prof. Chiara Petrioli}
+\tutorcoord{Dr. Georgia Koutsandria}
 \authoremail{emili.1802989@studenti.uniroma1.it}
 
 %\schoolname{Sapienza, Università di Roma}
@@ -66,6 +66,17 @@ oggetto di scaricamento delle batterie che li alimentano. Infatti, la morte prem
 disconnessione dello stesso, poichè frequentemente si tratta di reti \emph{multi-hop} che realizzano la comunicazione passando attraverso nodi intermedi, si può
 verificare perfino la disconnessione dell'intera rete.\\
 
+
+
+Nel capitolo 2 ...\\
+
+Nel capitolo 3 ...\\
+
+Nel capitolo 4 ...\\
+
+
+\chapter{Scenario di riferimento}
+
 Sino a qualche anno fa, la principale tendenza nello sviluppo di soluzioni ai problemi sopra menzionati consisteva nell'introduzione di cicli di attività
 dei nodi, il cosiddetto \emph{duty cycling} definito come la frazione di tempo in cui un nodo è attivo, il cui obbettivo era quello di minimizzare i momenti
 in cui i nodi sensori sono accessi senza alcun processamento di dati attivo. Seppur questo approccio permetta di prolungare la durata della vita della rete,
@@ -99,15 +110,10 @@ sono presenti molti protocolli di questo tipo (es. CTP-WUR, GREENROUTES, WHARP) 
 rispetto a diverse metriche. Nel seguito verrà analizzato in dettaglio il comportamento del protocollo GREEN-WUP che utilizza energy harvesting e
 wake up radios per realizzare un'opportuna scelta dei nodi intermedei necessari alla ricezione dei dati da parte del sink.\\
 
-Nel capitolo 2 verrà presentato il protocollo GREEN-WUP nel dettaglio, spiengandone il funzionamento e le idee alla base delle decisioni prese.\\
-
-Nel capitolo 3 verranno introdotte alcune variazioni al fine di migliorare il protocollo rispetto ad alcune metriche.\\
-
-Nel capitolo 4 ...\\
-
-
 \chapter{Il protocollo GREEN-WUP}
-\chapter{Benchmark e analisi del protocollo a seguito di variazioni}
+\chapter{Soluzioni proposte}
+\chapter{Valutazione delle prestazioni}
+\chapter{Conclusioni}
 
 \backmatter
 \cleardoublepage
